[build-system]
requires = [
    'setuptools >= 77.0.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "passagemath-cell-server"
version = "1.0.0"
dependencies = [
    # from README.md
    'lockfile',
    'paramiko',
    'sockjs-tornado',
    'sqlalchemy',
    # passagemath
    'passagemath-repl',
    'passagemath-symbolics',
]

[project.scripts]
sage-cell-server = "sagecell.web_server:main"

[tool.setuptools]
package-dir = {"sagecell" = ""}
