[build-system]
requires = [
    'setuptools >= 77.0.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "passagemath-cell-server"
version = "1.0.0"
dependencies = [
    # from README.md
    'lockfile',
    'sockjs-tornado',
    'sqlalchemy',
    # used by 'make build'
    'notebook',
    # passagemath
    'passagemath-repl',
    'passagemath-symbolics',
]

[project.optional-dependencies]
plot = [
    # used by 'make build'
    'jupyter-jsmol',
    # passagemath
    'passagemath-plot',
]
# For kernel providers accessed by ssh
ssh = [
    # from README.md
    'paramiko',
]

[project.scripts]
sage-cell-server = "sagecell.web_server:main"
sage-cell-kernel-provider = "sagecell.kernel_provider:main"

[tool.setuptools]
package-dir = {"sagecell" = ""}
